style.css
@font-face {
    font-family: "Open Sans";
    font-style: normal;
    font-weight: 400;
    src: url("fonts/OpenSans-Regular.woff2") format("woff2");
    font-display: swap;
  }

  @font-face {
    font-family: "Open Sans";
    font-style: normal;
    font-weight: 600;
    src: url("fonts/OpenSans-SemiBold.woff2") format("woff2");
    font-display: swap;
  }
  
  @font-face {
    font-family: "Open Sans";
    font-style: normal;
    font-weight: 700;
    src: url("fonts/OpenSans-Bold.woff2") format("woff2");
    font-display: swap;
  }

  * {
    box-sizing: border-box;
  }

  .page {
    height: 100%;
  }
  
  .page__body {
    background-color: #ffffff;
    font-family: "Open Sans", sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 30px;
    color: #2B2B2B;
    margin: 0;
  }

img {
    max-width: 100%;
    height: auto;
    display: block;
  }

  .visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    border: 0;
    padding: 0;
    white-space: nowrap;
    clip-path: inset(100%);
    clip: rect(0 0 0 0);
    overflow: hidden;
  }

.wrapper {
    margin: 0 auto;
    width: 335px;
    max-width: 1170px;
}

/* header */

.header {
  font-family: "Open Sans", sans-serif;
  font-size: 12px;
  font-weight: 400;
  line-height: 16px;
  color: #FFFFFF;
  /* background: linear-gradient(180deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.1) 100%); */
  background-color: #2B2B2B;
  padding: 12px 0 15px;
}

.header__wrapper {
  display: flex;
  align-items: center;
  /* column-gap: 29px; */
  /* justify-content: space-between; */
  position: relative;
}

.header__logo {
  margin-bottom: 8px;
}

.header__list {
  list-style-type: none;
  padding: 0;
  margin: 0;
  margin-left: 30px;
  margin-right: 29px;
  width: 70px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 20px;
}

.header__link {
  display: block;
}

.header__button {
  /* align-self: center; */
  width: 32px;
  height: 3px;
}

/* .header__button::before {
  width: 100%;
  height: 3px;
}

.header__button::after {
  width: 24px;
  height: 3px;
} */

/* navigation */

.navigation__list {
  display: block;
  list-style-type: none;
  margin: 0;
  padding: 15px 0 32px;
  position: absolute;
  background-color: #2B2B35;
  top: 85px;
  left: 0;
  width: 100%;
  border-top: 1px solid #FFFFFF80;
}

.navigation__list--opened {
  display: block;
}

.navigation__services-list {
  display: block;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 184px;
  position: absolute;
  top: 15px;
  right: 0;
}

/* .navigation__services-list--opened {
  display: block;
} */

.navigation__item:not(:last-child) {
  margin-bottom: 15px;
}

.navigation__link {
  text-decoration: none;
  color: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 25px;
}

.navigation__item:first-child .navigation__link {
  font-weight: 700;
}

.navigation__text {
  margin: 0;
  color: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 25px;
  display: flex;
  align-items: center;
  gap: 10px;
}

.navigation__text::after {
  content: "";
  display: block;
  width: 6px;
  height: 16px;
  background: url("images/right-row.svg") no-repeat center;
  background-size: 100%;
}

.navigation__address {
  display: none;
  gap: 10px;
}

.navigation__address::before {
  content: "";
  display: block;
  width: 25px;
  height: 25px;
  background: url(images/address-phone.svg) no-repeat center ;
}

/* navigation-services */

.navigation-services__item {
  margin-bottom: 15px;
}

.navigation-services__link {
  text-decoration: none;
  color: inherit;
  font-size: 14px;
  font-weight: 400;
  line-height: 19px;
}

/* main */

/* hero */

.hero {
  padding: 23px 0 23px;
  background-color: #535353;
  height: 773px;
}

.hero__address {
  margin-bottom: 40px;
}

.hero__container {
  font-weight: 600;
  font-size: 16px;
  line-height: 24px;
  color: #FFFFFF;
}

.hero__image {
  margin-bottom: 10px;
}

.hero__title {
  margin: 0;
  font-weight: 600;
  font-size: 20px;
  line-height: 30px;
  margin-bottom: 20px;
}

.hero__title::before {
  content: "";
  display: block;
  width: 100%;
  height: 2px;
  background-color: #FFFFFF;
  margin-bottom: 10px;
}

.hero__description {
  margin: 0;
}

/* address */

.address {
  font-size: 16px;
  font-style: normal;
  line-height: 22px;
  /* width: 198px; */
  /* height: 145px; */
  display: flex;
  flex-direction: column;
  row-gap: 15px;
  color: #FFFFFF;
}

.address__title {
  margin: 0;
  font-size: 18px;
  line-height: 25px;
}

.address__link {
  text-decoration: none;
  color: #FFFFFF;
  display: flex;
  gap: 15px;
}

.address__link::before {
  content: "";
  width: 25px;
  height: 25px;
  display: block;
  background: url("images/address-phone.svg") no-repeat center;
}

.address__area {
  display: flex;
  gap: 15px;
}

.address__area::before {
  content: "";
  width: 25px;
  height: 25px;
  display: block;
  background: url("images/address-phone.svg") no-repeat center;
}

.address__time {
  display: flex;
  gap: 15px;
}

.address__time::before {
  content: "";
  width: 25px;
  height: 25px;
  display: block;
  background: url("images/address-phone.svg") no-repeat center;
}

.address__list {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  gap: 15px;
}

/* services */

.services{
  padding: 70px 0 50px;
}

/* services-header */
.services__container{
display: flex;
justify-content: space-between;
align-items: center;
gap: 20px;
margin-bottom: 30px;
}

.services__header{
margin: 0;
font-size: 1.5rem;
font-weight: 700;
max-width: 45%;
}

.services__decor-line{
width: 100%;
min-width: 45%;
height: 1px;
background-color: #2B2B2B80;
}

/* services-list */

.services__list{
list-style: none;
padding: 0;
width: 90%;
margin: 0 auto;
}

.services__item:not(:last-child){
  margin-bottom: 25px;
}

.services__image{
width: 100%;
object-fit: cover;
object-position: center;
aspect-ratio: 1/1;
margin-bottom: 10px;
-webkit-box-shadow: 5px 5px 14px 0px rgba(0,0,0,0.23);
-moz-box-shadow: 5px 5px 14px 0px rgba(0,0,0,0.23);
box-shadow: 5px 5px 14px 0px rgba(0,0,0,0.23);
}

.services__name,
.services__price{
  margin: 0;
  margin-bottom: 5px;
  font-weight: 600;
  font-size: 1rem;
}

.services__price{
  margin: 0;
}

/* contacts */

/* .contacts {} */

.contacts__title {
  margin: 0;
  font-size: 24px;
  font-weight: 700;
  line-height: 33px;
  margin-bottom: 30px;
}

.contacts__form {
  width: 252px;
}

.contacts__label {
  display: flex;
  flex-direction: column;
}

.contacts__label:not(:last-of-type) {
  margin-bottom: 10px;
}

.contacts__input {
  margin-top: 10px;
  padding: 11px 15px;
  border: none;
  border-bottom: 1px solid #2B2B2B;  
}

::placeholder {
  font-family: Open Sans;
  font-size: 14px;
  font-weight: 400;
  line-height: 18px;
  color: #979797;
}

.contacts__submit-button {
  margin-top: 30px;
}


/* footer */

.footer {
  font-size: 16px;
  font-weight: 400;
  line-height: 22px;
  background-color: #535353;
  color: #FFFFFF;
  padding: 30px 0;
}

.footer__address {
  margin-bottom: 30px;
}

/* requisites */

/* .requisites {} */

.requisites__title {
  margin: 0;
  margin-bottom: 20px;
  font-size: 18px;
  font-weight: 700;
  line-height: 23px;
}

.requisites__text {
  margin: 0;
}

.requisites__item {
  display: block;
}

.requisites__item:not(:last-child) {
  margin-bottom: 20px;
}

